bugfix horizontal scroll

--- a/lab2/thefuture/style.css
+++ b/lab2/thefuture/style.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+body {
+    padding: 1em;
+}
+
 .container {
     display: grid;
     gap: 1em;
@@ -43,7 +47,7 @@
 
 @media(min-width: 900px) {
     .container {
-        grid-template-columns: repeat(5, 20%);
+        grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(3, 1fr);
     }
 
